// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSheet Export Test should export correct data When the split separator is configured 1`] = `
Array [
  "province,city,type,sub_type,number",
  "浙江省,杭州市,家具,桌子,7789",
  "浙江省,绍兴市,家具,桌子,2367",
  "浙江省,宁波市,家具,桌子,3877",
  "浙江省,舟山市,家具,桌子,4342",
]
`;

exports[`TableSheet Export Test should export correct data with formatter 1`] = `
Array [
  "省份,城市,类别,子类别,数量",
  "浙江省,杭州市,家具,桌子,7789",
  "浙江省,绍兴市,家具,桌子,2367",
  "浙江省,宁波市,家具,桌子,3877",
  "浙江省,舟山市,家具,桌子,4342",
  "浙江省,杭州市,家具,沙发,5343",
  "浙江省,绍兴市,家具,沙发,632",
  "浙江省,宁波市,家具,沙发,7234",
  "浙江省,舟山市,家具,沙发,834",
  "浙江省,杭州市,办公用品,笔,945",
  "浙江省,绍兴市,办公用品,笔,1304",
  "浙江省,宁波市,办公用品,笔,1145",
  "浙江省,舟山市,办公用品,笔,1432",
  "浙江省,杭州市,办公用品,纸张,1343",
  "浙江省,绍兴市,办公用品,纸张,1354",
  "浙江省,宁波市,办公用品,纸张,1523",
  "浙江省,舟山市,办公用品,纸张,1634",
  "四川省,成都市,家具,桌子,1723",
  "四川省,绵阳市,家具,桌子,1822",
  "四川省,南充市,家具,桌子,1943",
  "四川省,乐山市,家具,桌子,2330",
  "四川省,成都市,家具,沙发,2451",
  "四川省,绵阳市,家具,沙发,2244",
  "四川省,南充市,家具,沙发,2333",
  "四川省,乐山市,家具,沙发,2445",
  "四川省,成都市,办公用品,笔,2335",
  "四川省,绵阳市,办公用品,笔,245",
  "四川省,南充市,办公用品,笔,2457",
  "四川省,乐山市,办公用品,笔,2458",
  "四川省,成都市,办公用品,纸张,4004",
  "四川省,绵阳市,办公用品,纸张,3077",
  "四川省,南充市,办公用品,纸张,3551",
  "四川省,乐山市,办公用品,纸张,352",
  ",,家具,桌子,26193",
  ",,家具,,49709",
  ",,家具,沙发,23516",
  ",,办公用品,,29159",
  ",,办公用品,笔,12321",
  ",,办公用品,纸张,16838",
  "浙江省,,家具,桌子,18375",
  "浙江省,,家具,沙发,14043",
  "浙江省,,办公用品,笔,4826",
  "浙江省,,办公用品,纸张,5854",
  "四川省,,家具,桌子,7818",
  "四川省,,家具,沙发,9473",
  "四川省,,办公用品,笔,7495",
  "四川省,,办公用品,纸张,10984",
  "浙江省,杭州市,家具,,13132",
  "浙江省,杭州市,办公用品,,2288",
  "浙江省,杭州市,,,15420",
  "浙江省,绍兴市,家具,,2999",
  "浙江省,绍兴市,办公用品,,2658",
  "浙江省,绍兴市,,,5657",
  "浙江省,宁波市,家具,,11111",
  "浙江省,宁波市,办公用品,,2668",
  "浙江省,宁波市,,,13779",
  "浙江省,舟山市,家具,,5176",
  "浙江省,舟山市,办公用品,,3066",
  "浙江省,舟山市,,,8242",
  "四川省,成都市,家具,,4174",
  "四川省,成都市,办公用品,,6339",
  "四川省,成都市,,,10513",
  "四川省,绵阳市,家具,,4066",
  "四川省,绵阳市,办公用品,,3322",
  "四川省,绵阳市,,,7388",
  "四川省,南充市,家具,,4276",
  "四川省,南充市,办公用品,,6008",
  "四川省,南充市,,,10284",
  "四川省,乐山市,家具,,4775",
  "四川省,乐山市,办公用品,,2810",
  "四川省,乐山市,,,7585",
  "浙江省,,家具,,32418",
  "浙江省,,办公用品,,10680",
  "浙江省,,,,43098",
  "四川省,,家具,,17291",
  "四川省,,办公用品,,18479",
  "四川省,,,,35770",
  ",,,,78868",
]
`;

exports[`TableSheet Export Test should export correct data with formatter if contain repeat column name 1`] = `
Array [
  "省份,子类别,类别,子类别,子类别",
  "浙江省,杭州市,家具,桌子,7789",
  "浙江省,绍兴市,家具,桌子,2367",
  "浙江省,宁波市,家具,桌子,3877",
  "浙江省,舟山市,家具,桌子,4342",
  "浙江省,杭州市,家具,沙发,5343",
  "浙江省,绍兴市,家具,沙发,632",
  "浙江省,宁波市,家具,沙发,7234",
  "浙江省,舟山市,家具,沙发,834",
  "浙江省,杭州市,办公用品,笔,945",
  "浙江省,绍兴市,办公用品,笔,1304",
  "浙江省,宁波市,办公用品,笔,1145",
  "浙江省,舟山市,办公用品,笔,1432",
  "浙江省,杭州市,办公用品,纸张,1343",
  "浙江省,绍兴市,办公用品,纸张,1354",
  "浙江省,宁波市,办公用品,纸张,1523",
  "浙江省,舟山市,办公用品,纸张,1634",
  "四川省,成都市,家具,桌子,1723",
  "四川省,绵阳市,家具,桌子,1822",
  "四川省,南充市,家具,桌子,1943",
  "四川省,乐山市,家具,桌子,2330",
  "四川省,成都市,家具,沙发,2451",
  "四川省,绵阳市,家具,沙发,2244",
  "四川省,南充市,家具,沙发,2333",
  "四川省,乐山市,家具,沙发,2445",
  "四川省,成都市,办公用品,笔,2335",
  "四川省,绵阳市,办公用品,笔,245",
  "四川省,南充市,办公用品,笔,2457",
  "四川省,乐山市,办公用品,笔,2458",
  "四川省,成都市,办公用品,纸张,4004",
  "四川省,绵阳市,办公用品,纸张,3077",
  "四川省,南充市,办公用品,纸张,3551",
  "四川省,乐山市,办公用品,纸张,352",
  ",,家具,桌子,26193",
  ",,家具,,49709",
  ",,家具,沙发,23516",
  ",,办公用品,,29159",
  ",,办公用品,笔,12321",
  ",,办公用品,纸张,16838",
  "浙江省,,家具,桌子,18375",
  "浙江省,,家具,沙发,14043",
  "浙江省,,办公用品,笔,4826",
  "浙江省,,办公用品,纸张,5854",
  "四川省,,家具,桌子,7818",
  "四川省,,家具,沙发,9473",
  "四川省,,办公用品,笔,7495",
  "四川省,,办公用品,纸张,10984",
  "浙江省,杭州市,家具,,13132",
  "浙江省,杭州市,办公用品,,2288",
  "浙江省,杭州市,,,15420",
  "浙江省,绍兴市,家具,,2999",
  "浙江省,绍兴市,办公用品,,2658",
  "浙江省,绍兴市,,,5657",
  "浙江省,宁波市,家具,,11111",
  "浙江省,宁波市,办公用品,,2668",
  "浙江省,宁波市,,,13779",
  "浙江省,舟山市,家具,,5176",
  "浙江省,舟山市,办公用品,,3066",
  "浙江省,舟山市,,,8242",
  "四川省,成都市,家具,,4174",
  "四川省,成都市,办公用品,,6339",
  "四川省,成都市,,,10513",
  "四川省,绵阳市,家具,,4066",
  "四川省,绵阳市,办公用品,,3322",
  "四川省,绵阳市,,,7388",
  "四川省,南充市,家具,,4276",
  "四川省,南充市,办公用品,,6008",
  "四川省,南充市,,,10284",
  "四川省,乐山市,家具,,4775",
  "四川省,乐山市,办公用品,,2810",
  "四川省,乐山市,,,7585",
  "浙江省,,家具,,32418",
  "浙江省,,办公用品,,10680",
  "浙江省,,,,43098",
  "四川省,,家具,,17291",
  "四川省,,办公用品,,18479",
  "四川省,,,,35770",
  ",,,,78868",
]
`;

exports[`TableSheet Export Test should export correct data with series number 1`] = `
Array [
  "序号	province	city	产品类型	sub_type	number",
  "1	浙江省	杭州市	家具	桌子	7789",
  "2	浙江省	绍兴市	家具	桌子	2367",
  "3	浙江省	宁波市	家具	桌子	3877",
  "4	浙江省	舟山市	家具	桌子	4342",
]
`;

exports[`TableSheet Export Test should export correct data with series number 2`] = `
Array [
  "序号	province	city	产品类型	sub_type	number",
  "1	浙江省	杭州市	家具	桌子	7789",
  "2	浙江省	绍兴市	家具	桌子	2367",
  "3	浙江省	宁波市	家具	桌子	3877",
  "4	浙江省	舟山市	家具	桌子	4342",
]
`;

exports[`TableSheet Export Test should export correct data with totals 1`] = `
"province	type	sub_type	number
浙江省-province	家具-type	桌子	7789
浙江省-province	家具-type	桌子	2367
浙江省-province	家具-type	桌子	3877
浙江省-province	家具-type	桌子	4342
浙江省-province	家具-type	沙发	5343"
`;
